--- a/styles.css
+++ b/styles.css
@@ -634,16 +634,17 @@ a {
 
 /* Media Queries for Mobile Responsiveness */
 
-@media (max-width: 782px) {
+@media (max-width: 768px) {
     .navbar {
         height: 100px;
     }
 
     .navbar-nav .nav-item .nav-link {
-        font-size: 18px;
+        font-size: 8px;
         padding: 10px;
         height: 10px;
         width: 10px;
+        
        
       
 
@@ -724,15 +725,18 @@ a {
     .feedback-heading h2 {
         font-size: 30px;
         top: 550px;
-        margin-left: 15px;
+        margin-left: 15%;
        font-weight: 700;
        color: white;
      
        
     }
 .feedback {
-        bottom: 200px;
-        right: 60px;
+       display: flex; 
+        justify-content: center;
+       align-items:flex-start;
+       bottom: 200px;
+       
         width: 250px;
         height: 300px;
         top: 610px;
@@ -741,13 +745,14 @@ a {
     }
 
     .section-2{
-        height: 650px;
+        height: 660px;
     }
 
     .feedback p {
         font-size: 15px;
         margin-top: 20px;
         font-family:Arial, Helvetica, sans-serif;
+        
         
     }
 
@@ -769,7 +774,8 @@ a {
 
     .section-2 .container p {
         font-size: 16px;
-        width:325px;
+        width:80%;
+        margin-left: 10%;
     }
 
    
@@ -779,7 +785,7 @@ a {
         height: auto;
         margin: auto 40px;
         margin-top: 20px;
-        margin-left: 30px;
+        margin-left: 10%;
 
     }
     .overlay-image {
@@ -844,7 +850,7 @@ a {
         width: 300px;
         height: 150px;
         top: 150px;
-        margin-left:15px;
+        margin-left:10px;
         border-radius: 50px;
     }
     
@@ -875,9 +881,10 @@ a {
     }
     .guest-photo {
         margin-bottom: 120px;
-        width: 150px;
+        width: 130px;
         height: 100px;
         border-radius: 50%;
+        margin-left: 7%;
     }
     
     .guest-name {
@@ -886,16 +893,17 @@ a {
 
     
     .blog-img {
-        height: 200px;
-        width: 250px;
+        height: 40%px;
+        width: 85%;
         margin-top: 20px;
     }
 
     .blog-text {
-        margin-left: 70px;
-        margin-right: 10px;
+        margin-left: 20%;
+     
+        
         margin-bottom: 2px;
-        width: 250px;
+        width: 60%;
         height: 230px;
     }
 
