--- a/styles.css
+++ b/styles.css
@@ -644,6 +644,7 @@ a {
         padding: 10px;
         height: 10px;
         width: 10px;
+        color: yellow;
         
        
       
@@ -655,6 +656,7 @@ a {
         height: 20px;
         border-bottom-right-radius: 0px;
         border-radius: 0%;
+        color: blue;
         
     }
     .navbar-logo {
@@ -665,26 +667,31 @@ a {
     }
 
     .section-1 img {
-        width: 100%;
-        height: 549px;
-        filter: blur(3px); 
-        border-bottom-left-radius: 0px;
+        position: absolute;
+        width: 94%;
+        height:58%;   
+        margin-right: -67%;
+        margin-top:%  ;
+        border-bottom-left-radius: 60px;
         
     }
 
     .section-1 {
-        height: 920px;
+        height: 70vh;
         background-color: #611A1F;
+        width: 60%;
+        border-bottom-right-radius: 75px;
     }
 
     .header-content {
-        left: 10%;
+        left: 15%;
     }
 
     .header-content h1 {
-        font-size: 20px;
+        font-size: 30px;
         margin-top: 20%;
-        color: #611A1F;
+        color: #ffffff;
+        margin-left: 13 %;
     }
 
     .header-content p, .header-content .contact-us-btn {
@@ -692,21 +699,21 @@ a {
         width: auto;
         height: auto;
         padding: 5px;
-        margin-top:10px;
-        color: #611A1F;
+        margin-top:15%;
+        color: #ffffff;
     }
 
     .header-content h2 {
         font-size: 15px;
-        margin-top: 10px;
-        color: #611A1F;
+        margin-top: 10%;
+        color: #EBC6A4;
         
 
     }
     .header-content h3 {
         font-size: 15px;
-        margin-top: 10px;
-        color: #611A1F;
+        margin-top: 20%;
+        color: #EBC6A4;
         margin-left: -47px;
         
 
@@ -723,33 +730,34 @@ a {
     
 
     .feedback-heading h2 {
-        font-size: 30px;
-        top: 550px;
-        margin-left: 15%;
+        font-size: 15px;
+        top: 60%;
+        margin-right: -89   %;
        font-weight: 700;
-       color: white;
+       color: #611A1F;
+       position: absolute;
      
        
     }
 .feedback {
-       display: flex; 
-        justify-content: center;
-       align-items:flex-start;
+       position: absolute;
        bottom: 200px;
        
-        width: 250px;
-        height: 300px;
-        top: 610px;
-       
-        border: 3px solid #611A1F;
+        width: 60%;
+        height:30%;
+        top: 68%;
+        left: 104%;
+        border-radius: 15%;
+        border: 2px solid #611A1F;
     }
 
     
 
     .feedback p {
-        font-size: 15px;
+        font-size:8px;
         margin-top: 20px;
         font-family:Arial, Helvetica, sans-serif;
+       
         
         
     }
@@ -761,10 +769,10 @@ a {
 
     .section-2 img {
         position: absolute;
-        width: 90px;
-        height: 180px;
+        width: 20%;
+        height: 20%;
         left: 0;
-        top: -520PX;
+        top: -20%;
     }
 
    
@@ -929,14 +937,20 @@ a {
         font-size: 15px;
     }
     
-
-
     .footer h5 {
         font-size: 20px;
+        height: -10px;
+        
+    }
+
+    .footer h5 {
+        font-size: 12px;
+        
     }
 
     .footer p {
-        font-size: 16px;
+        font-size: 7px;
+       
     }
     .footer img {
         width: 50px;
