--- a/styles.css
+++ b/styles.css
@@ -699,7 +699,7 @@ a {
         width: auto;
         height: auto;
         padding: 5px;
-        margin-top:15%;
+        margin-top:30%;
         color: #ffffff;
     }
 
@@ -712,7 +712,7 @@ a {
     }
     .header-content h3 {
         font-size: 15px;
-        margin-top: 20%;
+        margin-top: 25%;
         color: #EBC6A4;
         margin-left: -47px;
         
@@ -732,7 +732,7 @@ a {
     .feedback-heading h2 {
         font-size: 15px;
         top: 60%;
-        margin-right: -89   %;
+        margin-right: -89%;
        font-weight: 700;
        color: #611A1F;
        position: absolute;
@@ -754,7 +754,7 @@ a {
     
 
     .feedback p {
-        font-size:8px;
+        font-size:50%;
         margin-top: 20px;
         font-family:Arial, Helvetica, sans-serif;
        
@@ -764,12 +764,12 @@ a {
 
     .section-2 {
         height: 700px;
-        background-color: #faf2f2;
+        background-color: #ffffff;
     }
 
     .section-2 img {
         position: absolute;
-        width: 20%;
+        width: 25%;
         height: 20%;
         left: 0;
         top: -20%;
