--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 *{
-    font-family: 'nexa-regular', poppins; ;
+    font-family: 'nexa-regular' "footlight mt bold" poppins; ;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -15,7 +15,7 @@
     font-size: 25px;
     color: white;
     margin: 3px ;
-    padding: 20px;
+    padding: 30px;
 }
 
 .navbar-nav .nav-item .nav-link:hover {
@@ -26,7 +26,7 @@
 }
 
 .navbar-logo {
-    width: 0px;
+    width: 10%;
     height: 100px;
     margin-left: 80px;
 }
@@ -92,6 +92,7 @@
     font-size: 30px;
     margin-top: 25px;
     font-weight: 900;
+    
 }
 
 .header-content .contact-us-btn {
@@ -120,6 +121,7 @@
     margin-top: 50px;
     text-align: center;
     font-weight: 900;
+  
     
     
 }
@@ -200,6 +202,7 @@
     color:#611A1F;
     padding-top: 90px;
     font-weight: 900;
+    font-family: footlight mt light;
 
 }
 
@@ -246,8 +249,9 @@
 .image-title, .image-subtitle {
     position: absolute;
     color: white; 
-    
+    font-family: footlight mt light;
     width: 100%;
+   
 }
 
 .image-title {
@@ -304,7 +308,9 @@
     margin-top: 20px;
     margin-bottom: 40px;
     padding: 5%;
-    font-weight: 500;}
+    font-weight: 500;
+    font-family: footlight mt light;
+}
 
 .feature-item {
     margin-bottom:70px;
@@ -313,6 +319,7 @@
 .feature-item h4{
     font-size: 35px;
     color: #611A1F;
+    font-family: footlight mt light;
 
 }
 
@@ -343,6 +350,7 @@
 .contact-section p {
     font-size: 30px;
     color: #611A1F;
+    font-family: footlight mt light;
 }
 
 .contact-section .btn {
@@ -418,6 +426,7 @@
     font-size: 90px;
     margin: 20px;
     color:#611A1F;
+    font-family: footlight mt light;
     
 }
 
@@ -441,7 +450,7 @@
 .gallery-img:nth-of-type(2) {
     position: absolute;
     top: 10px;
-    left: 900px;
+    left: 780px;
     width: 400px;
     height: 250px;
 }
@@ -449,7 +458,7 @@
 .gallery-img:nth-of-type(3) {
     position: absolute;
     top: 280px;
-    left: 900px;
+    left: 780px;
     width: 400px;
     height: 200px;
 }
@@ -486,13 +495,13 @@
 
 
 
-a {
+a{
     color: #611A1F;
     font-size: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-decoration: none;
+   
     font-weight: 300;
 }
 
@@ -508,14 +517,16 @@ a {
 .section-7 h2 {
     font-size: 80px;
     color: #611A1F;
+    font-family: footlight mt light;
 }
 
 .guest-img {
     border-radius: 50px;
+    margin-top: 20%;
 }
 
 .guest-name {
-    margin-top: 10px;
+    margin-top: 20px;
     font-size: 18px;
     color: #611A1F;
 }
@@ -535,6 +546,7 @@ a {
     margin-bottom: 10px;
     margin-top: -50px;
     color: #611A1F;
+    font-family: footlight mt light;
 }
 
 .blog-img {
@@ -560,6 +572,7 @@ a {
     font-size: 26px;
     margin-bottom: 40px;
     font-weight: 600;
+    font-family: footlight mt light;
 }
 
 .blog-text p {
@@ -611,7 +624,7 @@ a {
  
 .company-logo {
     position: absolute;
-    width: 250px;
+    width: 275px;
     height: 230px;
     margin: 10px;
     top: -85px;
@@ -625,8 +638,8 @@ a {
     width: 150px;
     height: 100px;
     margin: 10px;
-    top: -60px;
-    left: 43%; 
+    top: 11px;
+    left: 17%; 
 }
 
 
@@ -637,42 +650,72 @@ a {
 @media (max-width: 768px) {
     .navbar {
         height: 100px;
+        z-index: 999;  
+        color: white;
+        
+    }
+
+    .navbar-nav {
+        flex-direction: column;
+        background-color: #EBC6A4;
+        height: 100vh;
+        width: 50%;
+        position: absolute;
+        top: 0;
+        right: 0%;
+        transition: 0.5s;
+        z-index: 1000;
+
+        
+    }
+
+    .navbar-nav .nav-item {
+        padding: 10px;
+        width: 100%;
+        z-index: 1000;
+    
     }
 
     .navbar-nav .nav-item .nav-link {
-        font-size: 8px;
+        font-size: 28px;
         padding: 10px;
         height: 10px;
         width: 10px;
-        color: yellow;
+        background-color: #EBC6A4;
+        z-index: 1000;
         
        
       
 
     }
 
+  
+
+
     .header-background {
         width: 100%;
         height: 20px;
         border-bottom-right-radius: 0px;
         border-radius: 0%;
-        color: blue;
+        
         
     }
     .navbar-logo {
-        width: 10%;
-        height: 10px;
-        margin-left:150px;
+        width: 30%;
+        height: 50%;
+        margin-left:15%;
+       
        
     }
 
     .section-1 img {
         position: absolute;
-        width: 94%;
+        width: 99%;
         height:58%;   
         margin-right: -67%;
-        margin-top:%  ;
+        margin-top:0%  ;
         border-bottom-left-radius: 60px;
+        z-index: 999;
         
     }
 
@@ -691,30 +734,33 @@ a {
         font-size: 30px;
         margin-top: 20%;
         color: #ffffff;
-        margin-left: 13 %;
+        margin-left: 10%;
+        font-family: Footlight MT bold;
     }
 
     .header-content p, .header-content .contact-us-btn {
         font-size: 15px;
         width: auto;
         height: auto;
-        padding: 5px;
+        margin-left: 10%;
         margin-top:30%;
         color: #ffffff;
+            
     }
 
     .header-content h2 {
         font-size: 15px;
         margin-top: 10%;
         color: #EBC6A4;
-        
+        margin-left: 20px;
+        font-family: Footlight MT bold;
 
     }
     .header-content h3 {
         font-size: 15px;
         margin-top: 25%;
         color: #EBC6A4;
-        margin-left: -47px;
+        margin-left: -17px;
         
 
     }
@@ -732,7 +778,7 @@ a {
     .feedback-heading h2 {
         font-size: 15px;
         top: 60%;
-        margin-right: -89%;
+        margin-right: -84%;
        font-weight: 700;
        color: #611A1F;
        position: absolute;
@@ -961,3 +1007,6 @@ a {
         display: none;
     }
 }
+
+
+
