--- a/styles.css
+++ b/styles.css
@@ -14,19 +14,14 @@
 .navbar-nav .nav-item .nav-link {
     font-size: 25px;
     color: white;
-    margin: 3px ;
-    padding: 30px;
+    margin: 5px ;
+    gap: 10px;
+    padding: 20px;
 }
 
-.navbar-nav .nav-item .nav-link:hover {
-    color: #000000;
-    transition: 1.5s;
-    background-color: #EBC6A4;
-    border-radius: 50px;
-}
 
 .navbar-logo {
-    width: 10%;
+    width: 0px;
     height: 100px;
     margin-left: 80px;
 }
@@ -70,6 +65,7 @@
     height: 720px;
     max-height: 60%;
     border-bottom-left-radius: 100px;
+    border-top-left-radius: 30px;
     z-index: 999;
 }
 
@@ -84,8 +80,9 @@
 .header-content h1 {
     font-size: 90px;
     margin-top: 15%;
-    
+    letter-spacing: 2px;
     font-weight: 900;
+    font-family: footlight mt;
 }
 
 .header-content p {
@@ -176,7 +173,13 @@
 }
 
 
+.section-heading {
+    
+    font-family: footlight  mt bold;
 
+
+    
+}
 
 .section-2 {
     background-color: #faf2f2;
@@ -202,7 +205,7 @@
     color:#611A1F;
     padding-top: 90px;
     font-weight: 900;
-    font-family: footlight mt light;
+    font-family: footliy
 
 }
 
@@ -249,9 +252,8 @@
 .image-title, .image-subtitle {
     position: absolute;
     color: white; 
-    font-family: footlight mt light;
+    
     width: 100%;
-   
 }
 
 .image-title {
@@ -259,6 +261,7 @@
     font-size: 2rem; 
     font-weight: bold;
     text-align: center;
+    font-family: footlight mt;
 }
 
 .image-subtitle {
@@ -309,8 +312,7 @@
     margin-bottom: 40px;
     padding: 5%;
     font-weight: 500;
-    font-family: footlight mt light;
-}
+    font-family: footlight mt;}
 
 .feature-item {
     margin-bottom:70px;
@@ -319,7 +321,6 @@
 .feature-item h4{
     font-size: 35px;
     color: #611A1F;
-    font-family: footlight mt light;
 
 }
 
@@ -350,7 +351,6 @@
 .contact-section p {
     font-size: 30px;
     color: #611A1F;
-    font-family: footlight mt light;
 }
 
 .contact-section .btn {
@@ -426,7 +426,7 @@
     font-size: 90px;
     margin: 20px;
     color:#611A1F;
-    font-family: footlight mt light;
+    font-family: footlight mt;
     
 }
 
@@ -450,7 +450,7 @@
 .gallery-img:nth-of-type(2) {
     position: absolute;
     top: 10px;
-    left: 780px;
+    left: 880px;
     width: 400px;
     height: 250px;
 }
@@ -458,7 +458,7 @@
 .gallery-img:nth-of-type(3) {
     position: absolute;
     top: 280px;
-    left: 780px;
+    left: 880px;
     width: 400px;
     height: 200px;
 }
@@ -495,13 +495,13 @@
 
 
 
-a{
+a {
     color: #611A1F;
     font-size: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-   
+    text-decoration: none;
     font-weight: 300;
 }
 
@@ -517,16 +517,16 @@ a{
 .section-7 h2 {
     font-size: 80px;
     color: #611A1F;
-    font-family: footlight mt light;
+    font-family: footlight mt;
 }
 
 .guest-img {
     border-radius: 50px;
-    margin-top: 20%;
+    margin-top:30% ;
 }
 
 .guest-name {
-    margin-top: 20px;
+    margin-top: 10px;
     font-size: 18px;
     color: #611A1F;
 }
@@ -546,7 +546,7 @@ a{
     margin-bottom: 10px;
     margin-top: -50px;
     color: #611A1F;
-    font-family: footlight mt light;
+    font-family: footlight mt;  
 }
 
 .blog-img {
@@ -572,7 +572,7 @@ a{
     font-size: 26px;
     margin-bottom: 40px;
     font-weight: 600;
-    font-family: footlight mt light;
+    font-family: footlight mt;
 }
 
 .blog-text p {
@@ -624,7 +624,7 @@ a{
  
 .company-logo {
     position: absolute;
-    width: 275px;
+    width: 250px;
     height: 230px;
     margin: 10px;
     top: -85px;
@@ -638,8 +638,8 @@ a{
     width: 150px;
     height: 100px;
     margin: 10px;
-    top: 11px;
-    left: 17%; 
+    top: 17px;
+    left: 15%; 
 }
 
 
@@ -942,8 +942,8 @@ a{
     }
     .guest-photo {
         margin-bottom: 10%;
-        width: 35%;
-        height: 10;
+        width: 34%;
+        height: 20%;
         border-radius: 50%;
         margin-left: 13%;
     }
@@ -952,6 +952,7 @@ a{
         font-size: 50%;
         
     }
+
 
     
     .blog-img {
@@ -963,20 +964,19 @@ a{
     }
 
     .blog-text {
-        margin-left: 20%;
-     
-        
-        margin-bottom: 2px;
-        width: 60%;
-        height: 230px;
+        margin-left:15%;
+        margin-bottom: -10px;
+        width: 70%;
+        height: 10%;
+         
     }
 
     .blog-text h5 {
-        font-size: 15px;
+        font-size: 25px;
     }
 
     .blog-text p {
-        font-size: 13px;
+        font-size: 18   px;
     }
 
     a {
