--- a/styles.css
+++ b/styles.css
@@ -173,13 +173,6 @@
 }
 
 
-.section-heading {
-    
-    font-family: footlight  mt bold;
-
-
-    
-}
 
 .section-2 {
     background-color: #faf2f2;
@@ -205,7 +198,7 @@
     color:#611A1F;
     padding-top: 90px;
     font-weight: 900;
-    font-family: footliy
+    font-family: footlight  mt
 
 }
 
@@ -227,6 +220,11 @@
     position: relative;
     background-color: #faf2f2;
     
+}
+
+.image-subtitle-link {
+    text-decoration: none;
+    color: white;
 }
 
 .blurred-image {
@@ -648,48 +646,36 @@ a {
 /* Media Queries for Mobile Responsiveness */
 
 @media (max-width: 768px) {
-    .navbar {
+    .navbar{
         height: 100px;
-        z-index: 999;  
-        color: white;
-        
     }
-
-    .navbar-nav {
-        flex-direction: column;
-        background-color: #EBC6A4;
-        height: 100vh;
-        width: 50%;
-        position: absolute;
-        top: 0;
-        right: 0%;
-        transition: 0.5s;
-        z-index: 1000;
-
-        
-    }
-
-    .navbar-nav .nav-item {
+    .nav-link {
+        color: #ffffff; /* White text color */
         padding: 10px;
         width: 100%;
+        text-align: center;
         z-index: 1000;
-    
     }
-
-    .navbar-nav .nav-item .nav-link {
-        font-size: 28px;
-        padding: 10px;
-        height: 10px;
-        width: 10px;
-        background-color: #EBC6A4;
-        z-index: 1000;
+   .collapse {
         
-       
-      
-
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #611A1F;
+        position: absolute;
+        top: 0px;
+        right: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: 1001;
+        transition: 0.5s;
     }
+    
 
-  
+    .social-icons{
+        display: none;
+    }
 
 
     .header-background {
@@ -702,7 +688,7 @@ a {
     }
     .navbar-logo {
         width: 30%;
-        height: 50%;
+        height: 20%;
         margin-left:15%;
        
        
